# StudentManager

./: .travis.yml  CMakeLists.txt  README.md  installDep.sh  main.c
include/: app.h  callback.h  dashboard.h  filepath.h  headertest.h
settings/: user.json
src/: app.c  callback.c  dashboard.c  headertest.c
ui/: #add.glade#  add.glade  dashboard.glade  dashboard.glade~  login.glade
